[package]
name = "win_explore"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[[bin]]
name = "server"
path = "src/server_main.rs"

[[bin]]
name = "client"
path = "src/client_main.rs"

[dependencies]
error-chain = "0.10.0"
log = "0.3.7"
log4rs = "0.7"
structopt = "0.0.3"
structopt-derive = "0.0.3"
winapi = "0.2.8"